src/app/test/error.frag.error
error: Unknown variable: vcolor
  ┌─ glsl:7:15
  │
7 │     f_color = vcolor;
  │               ^^^^^^

